[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image/Tourelle.png" type="Texture" id=1]
[ext_resource path="res://Code/Tourelle.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Tourelle" type="Node2D"]

[node name="Tourelle" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Tourelle"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tourelle"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Tourelle"]
wait_time = 2.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Tourelle"]
[connection signal="area_entered" from="Tourelle" to="Tourelle" method="_on_Tourelle_area_entered"]
[connection signal="timeout" from="Tourelle/Timer" to="Tourelle" method="_on_Timer_timeout"]
[connection signal="screen_entered" from="Tourelle/VisibilityNotifier2D" to="Tourelle" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Tourelle/VisibilityNotifier2D" to="Tourelle" method="_on_VisibilityNotifier2D_screen_exited"]
